# oresat-flathils

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: pypi.yaml  tests.yaml
src/oresat_flathils/: __init__.py
src/oresat_flathils/cli/: __init__.py  cli.py  main.py
src/oresat_flathils/core/: __init__.py  sim_only_runner.py  test_runner.py
src/oresat_flathils/hardware/: __init__.py  core.py  fixtures.py  hardware.py
src/oresat_flathils/harnesses/example_harness/: conftest.py  test_example.py
src/oresat_flathils/harnesses/vulcan_harness/: __init__.py  conftest.py  env.yaml  test_canbus.py
src/oresat_flathils/simulator/: __init__.py  fixtures.py  simulator.py
tests/: test_cli.py  test_core.py  test_hardware.py  test_simulator.py
tests/example_harness/: __init__.py  env.yaml  test_example.py
