[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 82"]

[project]
description = "Hardware-in-the-Loop Testing Software Infrastructure for OreSat."
dynamic = ["version"]
license = { text = "GPL-3.0" }
name = "oresat-flathils"
readme = "README.md"
requires-python = ">= 3.14"
dependencies = [
    "pytest >= 9.0.0",
    "labgrid >= 26.0",
    "bsk >= 2.10.2"
]

[dependency-groups]
dev = [
  "mypy >= 2.1.0",
  "ruff >= 0.15.14",
]

[project.scripts]
flathils = "oresat_flathils.cli:main"

[tool.oresat_flathils.harnesses]
example-harness = { test_dir = "src/oresat_flathils/harnesses/example_harness" }

[tool.pytest.ini_options]
markers = [
    "hil: mark a test as requiring Hardware-in-the-Loop."
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "Q000",    # bad-quotes-inline-string
    "Q002",    # bad-quotes-docstring
    "D300",    # triple-single-quotes
    "COM812",  # prohibited-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
    "D102",    # undocumented-public-method
    # might leave off always. Does the user need to know __str__ makes a str?
    "D105",    # undocumented-magic-method
    # D203, and D213 conflict with D211 and D212, prefer the latter which
    # follow PEP257
    "D203",    # one-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    # Allow FIXMEs etc, but don't be too rigid about formatting. Consider not
    # ignoring FIX here so local runs point them out but ignoring them in CI
    # runs so they don't block commits.
    "FIX",      # flake8-fixme
    "TD001",    # invalid-todo-tag
    "TD002",    # missing-todo-author
    "TD003",    # missing-todo-link
    "TD004",    # missing-todo-colon
    "EM101",    # raw-string-in-exception
    "EM102",    # f-string-in-exception
    "D413",     # blank-line-after-last-section
    # This might be good to turn on later, right now I'm on the fence about it
    "TRY003",   # raise-vanilla-args
    # Another one that might be good later but for now is too argessive. Many of
    # the numbers it flags are obvious from context.
    "PLR2004",  # magic value used in comparison
    "PLR0911",  # too many return statements
]

[tool.ruff.lint.per-file-ignores]
# Test-specific lint ignores.
"test_*.py" = [
    "S101",      # assert - pytest prefers plain assert
    "PLC0415",   # import - pytests need flexibility around when to import
    # The test modules are pretty self-describing, no need to enforce docstrings for them.
    "D100",      # modules
    "D101",      # classes
    "D102",      # methods
    "D103",      # functions
    "D104",      # package
    "D105",      # magic methods
    "D106",      # nested classes
    "D107",      # __init__
]
"**/conftest.py" = [
    "F401"       # unused-import
]
